fix text alignment of quiz boxes

--- a/css/style.css
+++ b/css/style.css
@@ -299,44 +299,72 @@ p {
 
 #quiz-content {
     width: 64%;
-    height: 82%;
+    height: 50%;
     padding-left: 9%;
-    padding-top: 18%;
+    padding-top: 14%;
     padding-right: 9%;
-    padding-bottom: 18%;;
+    padding-bottom: 9%;
+    text-align: center;
+    align-content: center;
+    position: relative;
+    left: 9%;
 }
 
 #questionText {
-    z-index: 4;
-    font-size: 3vh
+    text-align: center;
+    width: 80%;
+    position: relative;
+    left: 10%;
+    font-size: 3vh;
 }
 
 .options {
     position: absolute;
+    align-items: center;
+    left: 40%;
+    right: 40%;
 }
 
 .btn-option {
     background: none;
-    border: none;
-    cursor: pointer;
+    border-radius: 25%;
+    border-color: burlywood;
     line-height: 1.5;
     font: 700 1.2rem 'Roboto Slab', sans-serif;
-    padding: 1em 2em;
+    padding: 0.5em 2em;
     letter-spacing: 0.05rem;
 }
 
-#true {
+#true-false {
+    position: absolute;
+    align-items: center;
+    align-content: center;
+    top: 50%;
+    height: 35%;
     text-align: center;
-    margin: auto;
-    display: flex;
-    justify-content: center;
 }
 
-#false {
+#trueBtn {
     text-align: center;
     margin: auto;
     display: flex;
     justify-content: center;
+    position: absolute;
+    top: 10%;
+}
+
+#falseBtn {
+    text-align: center;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    bottom: 10%;
+}
+
+#control-quiz {
+    position: absolute;
+    bottom: 85%;
 }
 
 #quit-quiz {
@@ -345,7 +373,18 @@ p {
     display: flex;
     justify-content: center;
     position: absolute;
-    left: 10%;
+    left: 20%;
+    top: 40%;
+}
+
+#next-question {
+    text-align: center;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    position: absolute;
+    left: 20%;
+    top: 40%;
 }
 
 #MCQ {
